# late-chunking

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  index.html  pyproject.toml
assets/: article.md  corpus_a_faq.json  corpus_b_filing.json  judgments.json  plan.md  prompt_arch.txt  prompt_cover.txt  prompt_create.txt  prompt_data.txt  prompt_inference.txt  prompt_retrieval.txt
src/late_chunking/: faq.py  filing.py
terraform/: outputs.tf  terraform.tfvars.sample  variables.tf
